solved image sourch issue

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ p {
 }
 
 .about-section {
-  background-image: url(images/banner.jpg);
+  background-image: url(Images/banner.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
