--- a/style.css
+++ b/style.css
@@ -14,10 +14,6 @@ h1 {
 .orange-color {
   color: orange;
 }
-p {
-  color: gray;
-  margin-bottom: 14%;
-}
 
 .flex-box {
   display: flex;
@@ -31,6 +27,10 @@ p {
   color: #494242;
   font-weight: 700;
   padding-top: 35%;
+}
+.half-width p {
+  color: gray;
+  margin-bottom: 14%;
 }
 .button {
   background-image: linear-gradient(to right, orange, tomato);
@@ -50,4 +50,39 @@ p {
 .half-width h2 {
   margin-top: 25%;
   color: #827373;
+}
+
+/* recipies section */
+
+.recipies {
+  margin-top: 5%;
+  text-align: center;
+}
+.rh2 {
+  color: gray;
+  font-size: 30px;
+}
+.rp {
+  padding: 0px 20%;
+  color: black;
+  font-size: 14px;
+}
+
+.all-items {
+  margin: 50px;
+}
+
+.recipes-item {
+  width: 27%;
+  margin: 0 3%;
+  box-shadow: 10px 10px 43px gray;
+  padding: 20px;
+  border-radius: 30px;
+}
+.recipes-item img {
+  width: 100%;
+  border-radius: 30px;
+}
+.recipes-item p {
+  color: grey;
 }
