--- a/style.css
+++ b/style.css
@@ -5,12 +5,6 @@ body {
   padding: 0;
 }
 
-h1 {
-  font-size: 43px;
-  color: #413a3a;
-  font-weight: 700;
-  padding-top: 35%;
-}
 .orange-color {
   color: orange;
 }
@@ -94,5 +88,17 @@ h1 {
   margin: 6%;
   padding: 25px 10px;
 }
-.social-item {
+
+/* footer section */
+.footer {
+  background-color: black;
+  color: white;
+  text-align: center;
+  padding-bottom: 6%;
+}
+
+.footer h1 {
+  font-size: 34px;
+  font-weight: 700;
+  padding-top: 50px;
 }
