--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 /* default */
-body {
-  font-family: "Poppins", sans-serif;
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: "Poppins", sans-serif;
 }
 
 .orange-color {
@@ -13,6 +16,42 @@ body {
   display: flex;
 }
 
+/* header section */
+.header-section {
+  display: flex;
+  justify-content: space-between;
+}
+.logo {
+  padding: 15px 0px 0px 72px;
+}
+.logo a img {
+  width: 18%;
+  height: 35%;
+  border-radius: 12px;
+}
+.menu {
+  margin-top: 23px;
+}
+.menu ul {
+  list-style-type: none;
+  display: flex;
+}
+.menu ul li {
+  margin: 0 30px;
+}
+.menu ul li a {
+  padding: 6px 13px;
+  text-decoration: none;
+  font-size: 16px;
+  color: black;
+}
+.menu ul li a:hover {
+  color: white;
+  background-color: #ff7900;
+  border-radius: 10px;
+}
+
+/* hero and about section */
 .half-width {
   padding: 5%;
 }
@@ -34,20 +73,18 @@ body {
   color: white;
   font-size: 13px;
 }
-
 .about-section {
   background-image: url(Images/banner.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
-
 .half-width h2 {
   margin-top: 25%;
+  margin-bottom: 5%;
   color: #827373;
 }
 
 /* recipies section */
-
 .recipies {
   margin-top: 5%;
   text-align: center;
@@ -55,17 +92,16 @@ body {
 .rh2 {
   color: gray;
   font-size: 30px;
+  padding-bottom: 20px;
 }
 .rp {
   padding: 0px 20%;
   color: black;
   font-size: 14px;
 }
-
 .all-items {
   margin: 50px;
 }
-
 .recipes-item {
   width: 27%;
   margin: 0 3%;
@@ -77,6 +113,9 @@ body {
   width: 100%;
   border-radius: 30px;
 }
+.recipes-item h2 {
+  padding: 15px 0;
+}
 .gray-color {
   color: grey;
 }
@@ -86,7 +125,7 @@ body {
   justify-content: space-around;
   box-shadow: 10px 10px 30px gray;
   margin: 6%;
-  padding: 25px 10px;
+  padding: 60px 10px;
 }
 
 /* contact section */
@@ -94,11 +133,13 @@ body {
   text-align: center;
   color: grey;
 }
+.contact-bottom {
+  margin: 30px 0;
+}
 .form {
   width: 60%;
   padding-left: 88px;
 }
-
 .in-div {
   padding-left: 30px;
   padding-bottom: 12px;
@@ -112,14 +153,12 @@ input {
 .in-sub {
   padding: 17px 0 0 78px;
 }
-
 textarea {
   padding: 10px 20px;
   border: 2px solid gray;
   background-color: #bbe2c6;
   border-radius: 10px;
 }
-
 .map {
   width: 40%;
   padding: 0px 5%;
@@ -135,7 +174,6 @@ textarea {
   text-align: center;
   padding-bottom: 6%;
 }
-
 .footer h1 {
   font-size: 34px;
   font-weight: 700;
